--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo/metro-config": "^54.0.9",
     "expo": "^54.0.23",
+    "expo-document-picker": "~14.0.7",
     "expo-linear-gradient": "~15.0.7",
     "expo-router": "~6.0.14",
     "expo-status-bar": "~3.0.8",
