--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@expo/metro-config": "^54.0.9",
     "expo": "^54.0.23",
     "expo-document-picker": "~14.0.7",
+    "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-router": "~6.0.14",
     "expo-status-bar": "~3.0.8",
