--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo/metro-config": "^54.0.9",
     "expo": "^54.0.26",
+    "expo-blur": "^15.0.8",
     "expo-document-picker": "~14.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
@@ -25,6 +26,7 @@
     "react": "^19.2.1",
     "react-dom": "^19.1.1",
     "react-native": "^0.82.1",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.2"
