--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,14 +20,18 @@
     "expo-document-picker": "~14.0.7",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
+    "expo-linking": "^8.0.11",
     "expo-router": "~6.0.14",
     "expo-status-bar": "~3.0.8",
+    "pdfjs-dist": "^5.4.530",
     "react": "^19.2.1",
     "react-dom": "^19.1.1",
     "react-native": "^0.82.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "^0.21.2"
+    "react-native-web": "^0.21.2",
+    "react-pdf": "^10.3.0",
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
