integrated accounts into dev. some issues still

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,21 +1,16 @@
 fastapi
 uvicorn[standard]
-pymongo
+pymongo>=4.6.0
 bcrypt
 pyjwt
 python-multipart
 pydantic[email]
-python-multipart
-pymongo
 python-jose[cryptography]
 passlib[bcrypt]
-bcrypt
-pyjwt
 langchain-google-genai
 langchain-core
 langchain-community
 sentence-transformers
 pypdf
 reportlab
-pydantic
 python-dotenv
