tried reducing time

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,5 +5,20 @@ DATABASE_INFO=career_ai
 # JWT Configuration
 JWT_SECRET=your_jwt_secret_key_here
 
-# Google Gemini AI Configuration
+# ============================================
+# LLM Provider Configuration (Modular System)
+# ============================================
+
+# Choose your LLM provider: "gemini" (cloud, fast) or "ollama" (local, private)
+LLM_PROVIDER=gemini
+
+# ---- Gemini Configuration (when LLM_PROVIDER=gemini) ----
 GEMINI_API_KEY=your_gemini_api_key_here
+GEMINI_MODEL=gemini-2.5-flash
+GEMINI_TEMPERATURE=0.3
+GEMINI_TIMEOUT=120
+GEMINI_MAX_RETRIES=3
+
+# ---- Ollama Configuration (when LLM_PROVIDER=ollama) ----
+# Requires Ollama running locally: https://ollama.ai
+# Models: phi3.5 (fast, 4GB), qwen2.5:7b (balanced, 6GB), llama3.3:8b (quality, 7GB)
