started integration of AI interviewer. UI is a bit broken and speech to text does not work.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,3 +16,10 @@ pypdf
 reportlab
 python-dotenv
 spacypython-docx
+google-generativeai
+google-cloud-texttospeech
+google-cloud-speech
+sounddevice
+numpy
+opencv-python
+mediapipe
